# syncd

./: .gitignore  .gitmodules  .search_cache.py.swp  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.original-handwritten  README  README.md  a.out  access_token.txt  at.old  autogen.sh  build-ubuntu.sh  cache.c  cache.h  cache.json  cmake-config.h.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure_command  gdrive-run.txt  index.html  install_jsonc.sh  install_jsonc_linux.sh  install_jsonc_osx.sh  install_libuv_osx.sh  install_pcc.sh  json_helper.c  json_helper.h  libtool  old.json  os.h  (+12 more)
.cmake-modules/: FindCURL.cmake  FindJSONC.cmake  FindLTDL.cmake  FindMMAN.cmake  FindUV.cmake
.deps/: cache.Po  json_helper.Po  sync.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
libdropbox/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  buffer.h  curl-ca-bundle.crt  dropbox_api.c  dropbox_api.h  dropbox_error.h  dropbox_main.c  dropbox_urls.h  libdropbox.la
libdropbox/.deps/: dropbox_api.Plo
libdropbox/.libs/: libdropbox.la  libdropbox.lai  libdropbox.so.0  libdropbox.so.0.0.0  libdropbox.so.0.0.0T
libdropbox/curl/samples/: Makefile
libexec/: CMakeLists.txt  Makefile  Makefile.am  dropbox.c  dropbox.h  gdrive.c  gdrive.h  gdrive_cache.c  gdrive_cache.h  libsyncdb.la  libsyncfs.la  linuxfs.c  plugin_utils.c  strptime.c  strptime.h  syncfs.c  syncfs.h  uvfs.c
libexec/.deps/: dropbox.Plo  syncfs.Plo
libexec/.libs/: libsyncdb.la  libsyncdb.lai  libsyncdb.soT  libsyncfs.la  libsyncfs.lai
libgdrive/: CMakeLists.txt  Makefile.am  Makefile.handwritten  gdrive_api.c  gdrive_api.h  gdrive_main.c  links.c  links.h
libltdl/: Makefile  config.status  configure  dlopen.la  libltdlc.la  libtool
libltdl/.deps/: argz.Plo  dlopen.Plo  libltdlc_la-lt__alloc.Plo  libltdlc_la-lt_dlloader.Plo  libltdlc_la-lt_error.Plo  libltdlc_la-ltdl.Plo  libltdlc_la-preopen.Plo  libltdlc_la-slist.Plo  lt__strl.Plo
libltdl/loaders/.deps/: dlopen.Plo  libltdlc_la-preopen.Plo
librest/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  buffer.c  buffer.h  ca-certificates.crt  librest.la  rest.c  rest.h
librest/.deps/: buffer.Plo  rest.Plo
librest/.libs/: librest.la  librest.lai  librest.so.0  librest.so.0.0.0
plugins/: .gitignore  Makefile  dropbox.c  dropbox_c.c  dropbox_c.h  dropbox_py.c  dropbox_py.h  dropbox_py.pyx  gdrive.c  inotify.c  libsyncfs.so.1.0.1  libtest.aq  libtest.so.1.0.1  syncfs.c  test.c
src/: CMakeLists.txt  Makefile  Makefile.am  cache.c  cache.h  flock.c  flock.h  ipc_semaphore.c  ipc_semaphore.h  ipc_semaphore_posix.c  ipc_semaphore_posix.h  ipc_semaphore_windows.c  ipc_semaphore_windows.h  json_helper.c  json_helper.h  lock.c  lock.h  log.c  log.h  os.h  plugin.c  plugin.h  plugins.h  shared_memory.c  shared_memory.h  sync.c  syncd  syncd.c  test  testPlugin.c
src/.deps/: cache.Po  json_helper.Plo  json_helper.Po  sync.Po
