find_package(LTDL)
include_directories("${CMAKE_CURRENT_LIST_DIR}")
include_directories("${LTDL_INCLUDE_DIRS}")

if(HAVE_FLOCK)
	OPTION(USE_FLOCK_LK "Use Flock for database locking" ON)
	OPTION(USE_SEMAPHORE_LK "Use Semaphores for database locking" OFF)
else()
	set(USE_SEMAPHORE_LK, 1)
endif()

IF(WIN32)
	find_package(mman)
	set(SHARED_MEM "${MMAN_LIBRARIES}")
	set(LOCK_DEPS "ipc_semaphore.c")
ELSEIF(UNIX AND NOT APPLE)
    set(SHARED_MEM "rt")
	set(LOCK_DEPS "")
ELSE()
	set(SHARED_MEM "")
	set(LOCK_DEPS "")
ENDIF()

add_executable(syncd syncd.c cache.c lock.c ${LOCK_DEPS} shared_memory.c json_helper.c log.c)
target_link_libraries(syncd LINK_PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${LTDL_LIBRARIES} ${JSONC_LIBRARIES} ${SHARED_MEM})

add_executable(testPlugin testPlugin.c cache.c lock.c ${LOCK_DEPS} shared_memory.c json_helper.c log.c)
target_link_libraries(testPlugin LINK_PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${LTDL_LIBRARIES} ${JSONC_LIBRARIES} ${SHARED_MEM})

install(TARGETS syncd RUNTIME DESTINATION bin)
